labs/network-review/stock-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock
  namespace: network-review
spec:
  selector:
    app: stock
  ports:
    - port: 80
      targetPort: 8085
      name: http
