labs/network-review/stock-ingresspolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: stock-ingress-policy
  namespace: network-review
spec:
  CHANGE_ME
